--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,3 +33,6 @@ jobs:
       run: |
         echo "Tests failed - Please fix before merging"
         exit 1
+
+    - name: Run build
+      run: npm run build
