--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,7 @@ name: Run Tests
 on:
   pull_request:
     branches: [ main ]
-  push:
-    branches: [ dev ]
+    types: [opened, synchronize]
 
 jobs:
   test:
