--- a/package.json
+++ b/package.json
@@ -12,8 +12,26 @@
     "test:ci": "vitest run"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.7.0",
+    "@aws-amplify/ui-react-storage": "^3.4.1",
     "@tanstack/react-query": "^5.61.0",
-    "aws-amplify": "^6.9.0",
+    "@tanstack/react-table": "^8.20.5",
+    "@tiptap/extension-code-block": "^2.10.3",
+    "@tiptap/extension-image": "^2.10.3",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/extension-placeholder": "^2.10.3",
+    "@tiptap/extension-table": "^2.10.3",
+    "@tiptap/extension-table-cell": "^2.10.3",
+    "@tiptap/extension-table-header": "^2.10.3",
+    "@tiptap/extension-table-row": "^2.10.3",
+    "@tiptap/extension-task-item": "^2.10.3",
+    "@tiptap/extension-task-list": "^2.10.3",
+    "@tiptap/extension-text-align": "^2.10.3",
+    "@tiptap/extension-typography": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
+    "aws-amplify": "^6.10.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
