--- a/amplify.yml
+++ b/amplify.yml
@@ -1,9 +1,12 @@
 version: 1
-frontend:
+backend:
   phases:
-    preBuild:
+    build:
       commands:
         - npm ci --cache .npm --prefer-offline
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+frontend:
+  phases:
     build:
       commands:
         - npm run build
@@ -14,3 +17,4 @@ frontend:
   cache:
     paths:
       - .npm/**/*
+      - node_modules/**/*
