--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,11 @@
     "types": [
       "vitest/globals",
       "@testing-library/jest-dom"
-    ]
+    ],
+    "paths": {
+      "$amplify/*": [
+        "../.amplify/generated/*"
+      ]
+    }
   }
 }
