--- a/amplify/package.json
+++ b/amplify/package.json
@@ -1,3 +1,8 @@
 {
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.462.0",
+    "react-hot-toast": "^2.4.1"
+  }
 }
