--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
     "aws-amplify": "^6.10.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.1",
     "zustand": "^5.0.1"
   },
